# goldfish

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build-installer.bat  clippy.toml  deny.toml  dev.bat
.claude/: launch.json
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/goldfish-application/: Cargo.toml
crates/goldfish-application/src/: error.rs  export.rs  generator.rs  health.rs  hibp.rs  import.rs  kdf.rs  lib.rs  ports.rs  service.rs  session.rs  strength.rs  throttle.rs  totp.rs  use_cases.rs
crates/goldfish-crypto/: Cargo.toml
crates/goldfish-crypto/src/: aead.rs  derive.rs  error.rs  export.rs  kdf.rs  key.rs  lib.rs  mac.rs  rng.rs  vault.rs
crates/goldfish-crypto/tests/: vault_lifecycle.rs
crates/goldfish-domain/: Cargo.toml
crates/goldfish-domain/src/: entry.rs  error.rs  folder.rs  generator.rs  lib.rs  password.rs  record.rs  tag.rs  vault.rs
crates/goldfish-domain/tests/: entry_draft_builder.rs
crates/goldfish-infrastructure/: Cargo.toml
crates/goldfish-infrastructure/migrations/: V1__initial_schema.sql  V2__password_history.sql  V3__entry_kinds.sql  V4__entry_ordering.sql  V5__folder_appearance.sql  V6__tags.sql  V7__attachments.sql
crates/goldfish-infrastructure/src/: clock.rs  hibp.rs  keystore.rs  lib.rs  metadata.rs  random.rs  sqlite.rs
crates/goldfish-infrastructure/tests/: vault_store.rs
crates/goldfish-tauri/: Cargo.toml  tauri.conf.json
crates/goldfish-tauri/capabilities/: default.json  logs.json  subwindows.json
crates/goldfish-tauri/icons/: icon.icns
crates/goldfish-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
docs/: architecture.md  packaging.md  qa-checklist.md  testing-strategy.md  threat-model.md
e2e/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wdio.conf.ts
e2e/specs/: smoke.e2e.ts
src-frontend/: .gitignore  .npmrc  .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src-frontend/src/: index.css  main.tsx
src-frontend/src/components/: AppearanceDialog.tsx  BackupSection.tsx  EntryDetailDialog.tsx  EntryFormDialog.tsx  FolderSidebar.tsx  HealthDialog.tsx  LogViewer.tsx  PasswordGenerator.tsx  PasswordInput.tsx  PasswordStrength.tsx  RecoverySection.tsx  SettingsDialog.tsx  TopBar.tsx
src-frontend/src/components/ui/: button.tsx  card.tsx  dialog.test.tsx  dialog.tsx  input.tsx  label.tsx  textarea.tsx
src-frontend/src/hooks/: useActivityPing.ts  useExcludeFromCapture.ts  useIdleLock.test.ts  useIdleLock.ts
src-frontend/src/i18n/: index.ts
src-frontend/src/i18n/locales/: cs.json  de.json  en.json
src-frontend/src/lib/: appearance.ts  dnd.ts  strength.test.ts  strength.ts  tauri.test.ts  tauri.ts  utils.ts
src-frontend/src/providers/: I18nProvider.tsx  SettingsProvider.test.tsx  SettingsProvider.tsx  ThemeProvider.test.tsx  ThemeProvider.tsx  VaultProvider.test.tsx  VaultProvider.tsx
src-frontend/src/routes/: index.tsx
src-frontend/src/screens/: EntryWindow.tsx  LogWindow.tsx  OnboardingScreen.tsx  SettingsWindow.tsx  UnlockScreen.tsx  UnlockedScreen.tsx  VaultView.tsx
src-frontend/src/test/: setup.ts
