[package]
name = "goldfish-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Goldfish — audit-isolated crypto primitives (Argon2id, XChaCha20-Poly1305, HKDF, HMAC)."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
zeroize.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex = "0.4"
proptest = "1"
